fix: more doc revisions

--- a/design-toolkit/components/src/components/combobox-field/combobox-field.docs.mdx
+++ b/design-toolkit/components/src/components/combobox-field/combobox-field.docs.mdx
@@ -11,7 +11,7 @@ A comprehensive combobox component that provides an accessible input field with 
 Iti is composed of the following components:
 
 - **ComboBoxField** - Main combobox component with searchable dropdown functionality
-- **[Options](?path=/docs/components-options--playground)** Main container for all option items
+- **[Options](?path=/docs/components-options--playground)** - Main container for all option items
 
 ## Example usage
 ```tsx
