--- a/design-toolkit/components/src/components/icon/icon.docs.mdx
+++ b/design-toolkit/components/src/components/icon/icon.docs.mdx
@@ -10,7 +10,7 @@ A flexible icon container component that provides consistent sizing, styling, an
 It is composed of the following components:
 
 - **Icon** - Wrapper component for displaying SVG icons with consistent sizing
-- **Icon.Provider** - Context provider fro setting default icon sizes
+- **Icon.Provider** - Context provider for setting default icon sizes
 
 ## Example usage
 ```tsx
