--- a/design-toolkit/components/src/components/menu/menu.docs.mdx
+++ b/design-toolkit/components/src/components/menu/menu.docs.mdx
@@ -14,8 +14,8 @@ It is composed of the following components:
 - **Menu** - Root menu component that wraps the dropdown portion
 - **Menu.Trigger** - Manages open/close behavior and anchors menu position
 - **Menu.Item** - Individual menu item with support for labels and description
-- **Menu.Item.Label** - Item display label
-- **Menu.Item.Description** - Item description subtext
+- **Menu.Item.Label** - Item display label (accessed via Text component with slot='label')
+- **Menu.Item.Description** - Item description subtext (accessed via Text component with slot='description')
 - **Menu.Separator** - Visual line separator between menu sections
 - **Menu.Section** - Visually distinct section optional title
 - **Menu.Submenu** - Nested submenu flyout for hierarchical items
@@ -123,6 +123,24 @@ The Menu supports all the [props from `react-aria-components` Menu](https://reac
 - **`classNames`** - Custom class names for different parts:
   - `section` - Applied to the section container
   - `header` - Applied to the section header
+
+### Menu.Trigger Props
+The Menu.Trigger component supports all the [props from `react-aria-components` MenuTrigger](https://react-spectrum.adobe.com/react-area/Menu.html#menutrigger).
+
+### Menu.Submenu Props
+The Menu.Trigger component supports all the [props from `react-aria-components` Submenu](https://react-spectrum.adobe.com/react-area/Menu.html#submenu).
+
+### Menu.Item.Label Props
+- **`children`** - Label text content
+- **`className`** - Custom CSS class name for styling
+
+### Menu.Item.Description Props
+- **`children`** - Description text content
+- **`className`** - Custom CSS class name for styling
+
+### Menu.Separator Props
+- **`className`** - Custom CSS class name for styling
+
 
 ## Implementation Notes
 
