--- a/design-toolkit/components/src/components/tabs/summary.docs.mdx
+++ b/design-toolkit/components/src/components/tabs/summary.docs.mdx
@@ -36,3 +36,4 @@ Error boundaries for incorrect usage of these components:
 
 - `Tabs` must include a `Tabs.List`
 - `Tabs.List` must include at least 1 `Tabs.Tab`
+- `Tabs.Tab` should have a corresponding `Tabs.Panel` with matching `id`
